# Clothy

./: Makefile  README.md  my_map.yaml
ROS/: Makefile  my_map.pgm
ROS/clothy_turtlebot/log/: latest_build
ROS/ros/: CMakeLists.txt  package.xml
ROS/turtlebot3_ws/install/: local_setup.sh  setup.bash  (+3 more)
WEB/src/: index.html  manifest.json
bag_files/rosbag2_2024_05_29-12_09_41/: metadata.yaml  rosbag2_2024_05_29-12_09_41_0.db3
clothy/: CMakeLists.txt  package.xml
clothy_interface/: CMakeLists.txt  package.xml  setup.cfg  setup.py
clothy_interface/srv/: MyWavpointMsg.srv
clothy_nav2_system/: package.xml  setup.cfg  setup.py
clothy_nav2_system/clothy_nav2_system/: go_goal.py  initial_pose_pub.py  my_waypoint_follower.py
clothy_nav2_system/config/: clothy_map_virtual.yaml  clothy_nav2_params.yaml  mapita_cafeteria_porlamañanita.yaml  my_mapita.yaml
clothy_nav2_system/launch/: clothy_nav2_system.launch.py  clothy_nav2_waypoints_follower.launch.py
clothy_provide_map/: package.xml  setup.cfg  setup.py
clothy_provide_map/launch/: clothy_provide_map.launch.py
clothy_provide_map/map/: clothy_map_virtual.pgm  clothy_map_virtual.yaml  mapita_cafeteria_porlamañanita.pgm  my_mapita.yaml
clothy_provide_map/rviz/: config_rvizz.rviz
clothy_service/: package.xml  setup.cfg  setup.py
clothy_service/clothy_service/: movement_client.py  movement_server.py  my_waypoint_follower_server.py
clothy_service/launch/: movement_server_launch.launch.py  my_waypoint_follower_server_launch.launch.py
clothy_slam/: package.xml  setup.cfg  setup.py
clothy_slam/launch/: clothy_slam.launch.py
clothy_slam/map/: clothy_map_virtual.pgm  clothy_map_virtual.yaml  clothy_map_virtual2.pgm  my_mapita.pgm  my_mapita.yaml
clothy_world/: CMakeLists.txt  package.xml
clothy_world/launch/: turtlebot3_clothy_world.launch.py
clothy_world/urdf/: turtlebot3_burger_pi.urdf
clothy_world/world/: burger.model  burger_pi.model  warehouse.world
install/: local_setup.sh  setup.ps1  setup.sh
log/: latest_build
opencv2/: package.xml  setup.cfg  setup.py
opencv2/launch/: image_server_launch.py
opencv2/opencv2/: image_saver_node.py
show_msg/: package.xml  setup.cfg
show_msg/show_msg/: show_msg.py  show_msg_param.py
(+247 files in other folders)
